# tg-bot

./: LICENSE  tgbot.code-workspace
client/: .env.example  .prettierrc.json  nuxt.config.ts  package.json  uno.config.ts
client/app/assets/css/: fonts.css  main.css  transition.css
client/app/components/naive/: NaiveConfig.vue
client/app/composables/: naiveApi.ts
client/app/layouts/: default.vue
client/app/pages/: bill.vue
client/app/plugins/: dayjs.ts
client/app/types/: components.d.ts
client/app/utils/: index.ts  language.ts  query.ts  responsive.ts  url-utils.ts  urls.ts
client/app/utils/naive-ui/: config.ts  dialog.ts  index.ts  renderer.ts
server/: .gitignore  pyproject.toml
server/src/backend/: __init__.py  app.py
server/src/backend/api/: db.py
server/src/backend/api/main/: cache.py  models.py  types.py  views.py
server/src/backend/common/: pydantic.py
server/src/backend/migrations/models/: 0_20250213183339_init.py  0_20250226153329_init.py  1_20250213191218_update.py  1_20250303134300_update.py  2_20250213192318_update.py  3_20250213193919_update.py  4_20250221202850_update.py
server/src/conf/: logconfig.json
server/src/project/: __init__.py  cli.py  env.py  scripts.py  settings.py
server/src/tg_bot/: callbacks.py  commands.py  core.py  decorators.py  exceptions.py  templates.py  utils.py
server/src/tg_bot/backend/: sdk.py
server/src/tg_bot/backend/sdk/: __init__.py  commands.py  fns.py
